spring-cloud/microservice/k8s/hystrix-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: hystrix-dashboard
  name: hystrix-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hystrix-dashboard
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/eureka-net: "true"
        io.kompose.service: hystrix-dashboard
    spec:
      containers:
        - image: microservice-cloud/hystrix-dashboard:0.0.1-SNAPSHOT
          name: hystrix-dashboard
          ports:
            - containerPort: 9000
          resources: {}
      hostname: hystrix-dashboard
      restartPolicy: Always
status: {}
