spring-cloud/microservice/k8s/peer2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: peer2
  name: peer2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: peer2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/eureka-net: "true"
        io.kompose.service: peer2
    spec:
      containers:
        - env:
            - name: CONFIGSPATH
              valueFrom:
                configMapKeyRef:
                  key: CONFIGSPATH
                  name: env
            - name: CONFIG_SERVER_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: CONFIG_SERVER_PASSWORD
                  name: env
            - name: CONFIG_SERVER_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: CONFIG_SERVER_USERNAME
                  name: env
            - name: RABBITMQ_SERVER
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_SERVER
                  name: env
            - name: RABBITMQ_SERVER_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_SERVER_PASSWORD
                  name: env
            - name: RABBITMQ_SERVER_PORT
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_SERVER_PORT
                  name: env
            - name: RABBITMQ_SERVER_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_SERVER_USERNAME
                  name: env
            - name: REDIS_SERVER
              valueFrom:
                configMapKeyRef:
                  key: REDIS_SERVER
                  name: env
            - name: REGISTRY_SERVER1
              valueFrom:
                configMapKeyRef:
                  key: REGISTRY_SERVER1
                  name: env
            - name: REGISTRY_SERVER1_PORT
              valueFrom:
                configMapKeyRef:
                  key: REGISTRY_SERVER1_PORT
                  name: env
            - name: REGISTRY_SERVER2
              valueFrom:
                configMapKeyRef:
                  key: REGISTRY_SERVER2
                  name: env
            - name: REGISTRY_SERVER2_PORT
              valueFrom:
                configMapKeyRef:
                  key: REGISTRY_SERVER2_PORT
                  name: env
            - name: REGISTRY_SERVER_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: REGISTRY_SERVER_PASSWORD
                  name: env
            - name: REGISTRY_SERVER_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: REGISTRY_SERVER_USERNAME
                  name: env
            - name: spring.profiles.active
              value: peer2
          image: registry.cn-hangzhou.aliyuncs.com/zhaozhiwei_1992_pub/microservice-eureka-server:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent   # 只有镜像不存在时，才会进行镜像拉取
          name: peer2
          ports:
            - containerPort: 8762
          resources: {}
      hostname: eureka-backup
        #      restartPolicy: Always
status: {}
