spring-cloud/microservice/k8s/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  ports:
    - name: "7070"
      port: 7070
      targetPort: 7070
    - name: "7071"
      port: 7071
      targetPort: 7071
    - name: "7072"
      port: 7072
      targetPort: 7072
    - name: "7073"
      port: 7073
      targetPort: 7073
    - name: "7074"
      port: 7074
      targetPort: 7074
    - name: "7075"
      port: 7075
      targetPort: 7075
  selector:
    io.kompose.service: config-server
status:
  loadBalancer: {}
