spring-cloud/microservice/k8s/file-upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: file-upload
  name: file-upload
spec:
  ports:
    - name: "9997"
      port: 9997
      targetPort: 9997
    - name: "9998"
      port: 9998
      targetPort: 9998
    - name: "9999"
      port: 9999
      targetPort: 9999
  selector:
    io.kompose.service: file-upload
status:
  loadBalancer: {}
