spring-cloud/microservice/k8s/peer2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: peer2
  name: peer2
spec:
  ports:
    - name: "8762"
      port: 8762
      targetPort: 8762
  selector:
    io.kompose.service: peer2
status:
  loadBalancer: {}
