spring-cloud/microservice/k8s/eureka-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: eureka-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/eureka-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/eureka-net: "true"
